--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,7 +36,12 @@
       </script>
       <button>button</button>
       <p class="txt">test</p>
-      <div style="width: 100px; height: 1000px; background-color: #ddd"></div>
+      <div class="size"></div>
+      <div class="aspect"></div>
+      <div class="arrow"></div>
+      <div class="box-wrap">
+        <div class="box"></div>
+      </div>
       <footer></footer>
     </div>
   </body>
