pug の拡張子変変更関係を整理・調整

--- a/url-list/index.html
+++ b/url-list/index.html
@@ -66,7 +66,7 @@ ul {
 </style>
 <script>
 var domain = 'domain.com';
-var data = [ '/index.html', '/factory/index.html', '/factory/hoge/index.html', '/factory/fuga/fuga/index.html', '/sp/index.html' ];
+var data = [ '/index.html', '/index.php', '/factory/index.html', '/factory/hoge/index.html', '/factory/fuga/fuga/index.html', '/sp/index.html', '/sp/index.php' ];
 window.addEventListener('DOMContentLoaded', () => {
   var $list     = document.getElementById('list');
   var $fragment = document.createDocumentFragment();
