--- a/_esdoc/index.html
+++ b/_esdoc/index.html
@@ -307,7 +307,10 @@ alias: {
 </code></pre>
 <h2 id="test">test</h2>
 <p>/test/ &#x4EE5;&#x4E0B;&#x306B; <a href="http://jasmine.github.io/">Jasmine</a> &amp; <a href="https://karma-runner.github.io/">Karma</a> &#x3067;&#x30C6;&#x30B9;&#x30C8;&#x3067;&#x304D;&#x308B;&#x74B0;&#x5883;&#x3092;&#x7528;&#x610F;&#x3057;&#x3066;&#x3044;&#x307E;&#x3059;&#x3002;</p>
-<h1 id="url-list">URL list</h1>
+<h2 id="esdoc">ESDoc</h2>
+<p>&#x4EE5;&#x4E0B;&#x30B3;&#x30DE;&#x30F3;&#x30C9;&#x3067; /_esdoc/ &#x4EE5;&#x4E0B;&#x306B;API&#x30C9;&#x30AD;&#x30E5;&#x30E1;&#x30F3;&#x30C8;&#x3092;&#x51FA;&#x529B;&#x3057;&#x307E;&#x3059;&#x3002;</p>
+<pre><code><code class="source-code prettyprint">npm run esdoc</code>
+</code></pre><h1 id="url-list">URL list</h1>
 <p>3003&#x30DD;&#x30FC;&#x30C8;&#x306B;URL&#x4E00;&#x89A7;&#x3092;&#x8868;&#x793A;&#x3057;&#x307E;&#x3059;&#x3002;</p>
 <p>/url-list/tmp.html &#x304C;&#x30C6;&#x30F3;&#x30D7;&#x30EC;&#x30FC;&#x30C8;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x306B;&#x306A;&#x3063;&#x3066;&#x3044;&#x3066;<br>/url-list/index.html &#x306B;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x4E00;&#x89A7;&#x306E;&#x30C7;&#x30FC;&#x30BF;&#x3092;&#x8FFD;&#x52A0;&#x3057;&#x3066;&#x51FA;&#x529B;&#x3055;&#x308C;&#x307E;&#x3059;&#x3002;</p>
 <h2 id="-">&#x30C6;&#x30B9;&#x30C8;&#x30B5;&#x30FC;&#x30D0;&#x30FC;&#x3078;&#x306E;&#x30EA;&#x30F3;&#x30AF;</h2>
