--- a/_esdoc/source.html
+++ b/_esdoc/source.html
@@ -52,12 +52,20 @@
   <tbody>
     
   <tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/webpack/imports/sample.js.html">webpack/imports/sample.js</a></span></td>
+      <td data-ice="identifier" class="identifiers">-</td>
+      <td class="coverage"><span data-ice="coverage">-</span></td>
+      <td style="display: none;" data-ice="size">58 byte</td>
+      <td style="display: none;" data-ice="lines">5</td>
+      <td style="display: none;" data-ice="updated">2016-09-05 09:02:54 (UTC)</td>
+    </tr>
+<tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/webpack/src/scripts/index.js.html">webpack/src/scripts/index.js</a></span></td>
       <td data-ice="identifier" class="identifiers">-</td>
       <td class="coverage"><span data-ice="coverage">-</span></td>
-      <td style="display: none;" data-ice="size">1846 byte</td>
-      <td style="display: none;" data-ice="lines">73</td>
-      <td style="display: none;" data-ice="updated">2016-09-05 06:32:38 (UTC)</td>
+      <td style="display: none;" data-ice="size">1887 byte</td>
+      <td style="display: none;" data-ice="lines">74</td>
+      <td style="display: none;" data-ice="updated">2016-09-05 11:08:43 (UTC)</td>
     </tr>
 </tbody>
 </table>
