--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,9 +10,9 @@
     <meta property="og:url" content="//ogp.org">
     <meta property="og:image" content="//ogp.org/ogp.png">
     <meta property="og:type" content="website">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/styles/style.css" media="all">
-    <script src="/scripts/index.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="styles/style.css" media="all">
+    <script src="scripts/bundle.js"></script>
   </head>
   <body class="body-class" id="body-id">
     <div class="wrap">
