コンパイル後ファイルのコミット漏れ

--- a/htdocs/factory/hoge/index.html
+++ b/htdocs/factory/hoge/index.html
@@ -10,19 +10,9 @@
     <meta property="og:url" content="//ogp.org">
     <meta property="og:image" content="//ogp.org/ogp.png">
     <meta property="og:type" content="website">
-    <link rel="shortcut icon" href="function relative(path) {
-      var isDirectory = !!path.match(/^.+\/$/);
-      var pathName = (0, _path.relative)(ret.dirname, path);
-      return function () {
-        if (pathName) {
-          return isDirectory ? pathName + '/' : pathName;
-        } else {
-          return './';
-        }
-      }();
-    }favicon.ico">
-    <link rel="stylesheet" href="/styles/style.css" media="all">
-    <script src="/scripts/bundle.js"></script>
+    <link rel="shortcut icon" href="../../favicon.ico">
+    <link rel="stylesheet" href="../../styles/style.css" media="all">
+    <script src="../../scripts/bundle.js"></script>
   </head>
   <body class="body-class" id="body-id">
     <div class="wrap">
