--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/style.css" media="all">
+    <script src="scripts/vendor.js"></script>
     <script src="scripts/bundle.js"></script>
   </head>
   <body class="body-class" id="body-id">
