--- a/htdocs/sp/index.html
+++ b/htdocs/sp/index.html
@@ -14,6 +14,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png">
     <link rel="stylesheet" href="styles/style.css" media="all">
+    <script src="../scripts/vendor.js"></script>
     <script src="scripts/bundle.js"></script>
   </head>
   <body class="body-class" id="body-id">
